<resources>
    <string name="app_name">Fly On Time</string>

    <!-- Strings related to login -->
    <string name="prompt_airlineCode">Airline Code</string>
    <string name="prompt_flightNumber">Flight Number</string>
    <string name="get_flight_info">Get Flight Info</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="departure_date">Departure Date</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="input_layover_prompt">Input Layover Information Below</string>

    <string name="title_activity_flight_info_display">flightInfoDisplayActivity</string>
    <string name="title_airport">Airport:</string>
    <string name="title_date">Date:</string>
    <string name="title_terminal">Terminal:</string>
    <string name="title_gate">Gate:</string>
    <string name="title_scheduled">Scheduled Time:</string>
    <string name="title_estimated">Estimated Time:</string>
    <string name="title_weather">Weather:</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="directions">Directions</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="fsAppID">7eaad004</string>
    <string name="fsAppKey">dcd9dbb9b5ad6f4b1cf3478268b627b6</string>
    <string name="fsDelayIndex">https://api.flightstats.com/flex/delayindex/rest/v1/json/airports/</string>
    <string name="fsFlightStatusByArrivalDate">https://api.flightstats.com/flex/flightstatus/rest/v2/json/flight/status/</string>
    <string name="fsScheduledFlightsByCarrierFNDate">https://api.flightstats.com/flex/schedules/rest/v1/json/flight/</string>
    <string name="fsWeather">https://api.flightstats.com/flex/weather/rest/v1/json/metar/</string>
    <string name="googleCurLocationKey">AIzaSyDSPU5jM6i4BxPw0SYq5JOqq6JbmzW6mcA</string>
    <string name="googleMapsAppKey">AIzaSyBf3CLng_I7aSdXXBEIJZJEf3_WNK7patA</string>
    <string name="googleMapsAppURL">https://maps.googleapis.com</string>
    <string name="title_activity_maps">Map</string>
</resources>
